--- a/parroquiaproject/sitio/templates/inicio.html
+++ b/parroquiaproject/sitio/templates/inicio.html
@@ -1,3 +1,5 @@
+<!--
+
 <h1>noticias.com</h1>
 <p>¡Bienvenido!</p>
 
@@ -6,3 +8,20 @@
     <h6>{{iglesia.direccion}}</h6>
     <p>{{ iglesia.horarioMisa.texto }}</p>
 {% endfor %}
+
+ -->
+
+{% extends "base.html" %}
+{% block title %}Inicio{% endblock %}
+{% block content %}
+<h1>noticias.com</h1>
+<p>¡Bienvenido!</p>
+
+{% for iglesia in lista_iglesias %}
+  <h3>{{ iglesia.nombre }}</h3>
+  <h6>{{ iglesia.direccion }}</h6>
+  <p>{{ iglesia.horarioMisa.texto }}</p>
+{% empty %}
+  <p>No hay iglesias cargadas.</p>
+{% endfor %}
+{% endblock %}
