update signup, login & logout

--- a/parroquiaproject/sitio/templates/dashboard.html
+++ b/parroquiaproject/sitio/templates/dashboard.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Dashboard{% endblock %}
 {% block content %}
-<h1>Dashboard</h1>
-<p>Hola, {{ user.username }}. Esta página es privada.</p>
+<h1>Bienvenido {{ user.username }}</h1>
+<p>Esta es la sección privada.</p>
 {% endblock %}
