--- a/parroquiaproject/sitio/templates/inicio.html
+++ b/parroquiaproject/sitio/templates/inicio.html
@@ -11,8 +11,8 @@
 
  -->
 
-{% extends "base.html" %}
-{% block title %}Inicio{% endblock %}
+{% block title %}Inicio - Página inicial (pública){% endblock %}
+<p><a href="{% url 'login' %}">Iniciá sesión aquí</a></p>
 {% block content %}
 <h1>noticias.com</h1>
 <p>¡Bienvenido!</p>
