--- a/parroquiaproject/sitio/templates/registration/signup.html
+++ b/parroquiaproject/sitio/templates/registration/signup.html
@@ -6,4 +6,5 @@
   {{ form.as_p }}
   <button type="submit">Registrarme</button>
 </form>
+<p>¿Ya tienes cuenta? <a href="{% url 'login' %}">Iniciá sesión aquí</a></p>
 {% endblock %}
