--- a/parroquiaproject/sitio/templates/inicio.html
+++ b/parroquiaproject/sitio/templates/inicio.html
@@ -21,7 +21,7 @@
   <h3>{{ iglesia.nombre }}</h3>
   <h6>{{ iglesia.direccion }}</h6>
   <p>{{ iglesia.horarioMisa.texto }}</p>
-  <p>{{ iglesia.imagen }}</p>
+  <img src="{{ iglesia.imagen }}">
 {% empty %}
   <p>No hay iglesias cargadas.</p>
 {% endfor %}
