--- a/parroquiaproject/sitio/templates/inicio.html
+++ b/parroquiaproject/sitio/templates/inicio.html
@@ -10,19 +10,23 @@
 {% endfor %}
 
  -->
-
-{% block title %}Inicio - Página inicial (pública){% endblock %}
 <p><a href="{% url 'login' %}">Iniciá sesión aquí</a></p>
 {% block content %}
-<h1>noticias.com</h1>
-<p>¡Bienvenido!</p>
+<h1>Bienvenido a Parroquias Rafaela</h1>
 
-{% for iglesia in lista_iglesias %}
-  <h3>{{ iglesia.nombre }}</h3>
-  <h6>{{ iglesia.direccion }}</h6>
-  <p>{{ iglesia.horarioMisa.texto }}</p>
-  <img src="{{ iglesia.imagen }}">
-{% empty %}
-  <p>No hay iglesias cargadas.</p>
-{% endfor %}
-{% endblock %}
+<div style="display: flex; flex-direction: column; align-items: center; gap: 20px;">
+    {% for iglesia in lista_iglesias %}
+      <div style="border: 1px solid #ccc; border-radius: 10px; padding: 20px; max-width: 400px; text-align: center; box-shadow: 2px 2px 8px rgba(0,0,0,0.1);">
+        <h3>{{ iglesia.nombre }}</h3>
+        <h6>{{ iglesia.direccion }}</h6>
+        <p>{{ iglesia.horarioMisa.texto }}</p>
+        
+        {% if iglesia.imagen %}
+          <img src="{{ iglesia.imagen.url }}" alt="Imagen de {{ iglesia.nombre }}" style="max-width: 100%; height: auto; border-radius: 8px;">
+        {% endif %}
+      </div>
+    {% empty %}
+      <p>No hay iglesias cargadas.</p>
+    {% endfor %}
+  </div>
+  {% endblock %}
