--- a/parroquiaproject/sitio/templates/inicio.html
+++ b/parroquiaproject/sitio/templates/inicio.html
@@ -19,7 +19,14 @@
       <div style="border: 1px solid #ccc; border-radius: 10px; padding: 20px; max-width: 400px; text-align: center; box-shadow: 2px 2px 8px rgba(0,0,0,0.1);">
         <h3>{{ iglesia.nombre }}</h3>
         <h6>{{ iglesia.direccion }}</h6>
+        <h4>Horarios de Misa:</h4>
         <p>{{ iglesia.horarioMisa.texto }}</p>
+        {% if iglesia.listaActividades.all %}
+            <h4>Actividades:</h4>
+            {% for actividad in iglesia.listaActividades.all %}
+                <p>{{ actividad.titulo }}: {{ actividad.texto }}</p>
+            {% endfor %}
+        {% endif %}
         <img src="{{ iglesia.imagen_url }}" alt="Imagen de {{ iglesia.nombre }}" style="max-width:240px; height: auto; border-radius: 8px;">
       </div>
     {% empty %}
