--- a/parroquiaproject/sitio/templates/base.html
+++ b/parroquiaproject/sitio/templates/base.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    
     <meta charset="UTF-8">
     <title>{% block title %}Mi sitio{% endblock %}</title>
+    {% block head %}{% endblock %}
 </head>
 <body>
     <header>
