--- a/parroquiaproject/sitio/templates/inicio.html
+++ b/parroquiaproject/sitio/templates/inicio.html
@@ -5,32 +5,56 @@
 
 {% block head %}
 <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
-<h1>Lista de Actividades</h1>
+<div class="container my-4">
+    <h2 class="mb-4">Lista de Actividades</h2>
+    <div class="accordion" id="weeklyAccordion">
 
-{% for dia, acts in actividades_por_dia.items %}
-    {% if acts %}
-        <h2>{{ dia|capfirst }}</h2>
-        <table class="actividades">
-            <thead>
-                <tr>
-                    <th>Actividad</th>
-                    <th>Hora</th>
-                    <th>Iglesia</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for actividad in acts %}
-                    <tr>
-                        <td>{{ actividad.categoria }}</td>
-                        <td>{{ actividad.hora }}</td>
-                        <td>{{ actividad.iglesia.nombre }}</td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    {% endif %}
-{% endfor %}
+        {% for dia, acts in actividades_por_dia.items %}
+            {% if acts %}
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="heading{{ forloop.counter }}">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" 
+                            data-bs-target="#collapse{{ forloop.counter }}" 
+                            aria-expanded="false" 
+                            aria-controls="collapse{{ forloop.counter }}">
+                        {{ dia|capfirst }}
+                    </button>
+                </h2>
+                <div id="collapse{{ forloop.counter }}" 
+                     class="accordion-collapse collapse" 
+                     aria-labelledby="heading{{ forloop.counter }}" 
+                     data-bs-parent="#weeklyAccordion">
+                    <div class="accordion-body">
+                        <table class="table table-bordered table-striped">
+                            <thead class="table-dark">
+                                <tr>
+                                    <th>Actividad</th>
+                                    <th>Hora</th>
+                                    <th>Iglesia</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for actividad in acts %}
+                                <tr>
+                                    <td>{{ actividad.categoria }}</td>
+                                    <td>{{ actividad.hora }}</td>
+                                    <td>{{ actividad.iglesia.nombre }}</td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+        {% endfor %}
+
+    </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 {% endblock %}
