Add Iglesias page

--- a/parroquiaproject/sitio/templates/inicio.html
+++ b/parroquiaproject/sitio/templates/inicio.html
@@ -43,11 +43,11 @@
                             <thead class="table-dark">
                                 <tr>
                                     <th>Actividad 
-                                        <button class="btn btn-sm btn-warning ms-2">➕</button>
+                                        <button class="btn btn-sm btn-info ms-2">ℹ️</button>
                                     </th>
                                     <th>Hora</th>
                                     <th>Iglesia 
-                                        <button class="btn btn-sm btn-warning ms-2">➕</button>
+                                        <a href="/iglesias/" class="btn btn-sm btn-info ms-2">ℹ️</a>
                                     </th>
                                     <th>Acciones</th>
                                 </tr>
