--- a/parroquiaproject/sitio/templates/base.html
+++ b/parroquiaproject/sitio/templates/base.html
@@ -11,6 +11,7 @@
     </style>
     {% block head %}{% endblock %}
 </head>
+
 <body>
     <!-- Barra de navegación -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow">
@@ -55,5 +56,21 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    {% if messages %}
+        {% for message in messages %}
+        <script>
+        Swal.fire({
+            icon: "{% if message.tags %}{{ message.tags }}{% else %}info{% endif %}",
+            title: "{{ message|escapejs }}",
+            toast: true,
+            position: "top-end",
+            showConfirmButton: false,
+            timer: 2000,
+            timerProgressBar: true
+        });
+        </script>
+        {% endfor %}
+    {% endif %}
 </body>
 </html>
