--- a/parroquiaproject/sitio/templates/base.html
+++ b/parroquiaproject/sitio/templates/base.html
@@ -30,9 +30,9 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" href="/">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="/iglesias/">Iglesias</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Información</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Noticias</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Calendario</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/actividades/">Actividades</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/horarios/">Horarios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/calendario/">Calendario</a></li>
                 </ul>
 
                 <!-- Sesión -->
