cambios mobile acts

--- a/parroquiaproject/sitio/templates/base.html
+++ b/parroquiaproject/sitio/templates/base.html
@@ -63,7 +63,7 @@
 </nav>
 
     <!-- Contenido principal -->
-    <main class="container my-4">
+    <main class="container-sm my-4">
         {% block content %}{% endblock %}
     </main>
 
