--- a/parroquiaproject/sitio/templates/actividades.html
+++ b/parroquiaproject/sitio/templates/actividades.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container mt-4">
+<div class="container-sm my-4">
     <h2 class="mb-4 d-flex justify-content-between align-items-center">
         Actividades Vigentes
         <div>
