--- a/parroquiaproject/sitio/templates/actividades.html
+++ b/parroquiaproject/sitio/templates/actividades.html
@@ -1,34 +1,31 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}Actividades{% endblock %}
 
 {% block head %}
-<style>
-    .accordion-button {
-        background-color: #D9E7F7;
-    }
-</style>
+<link rel="stylesheet" href="{% static 'css/styles.css' %}">
 {% endblock %}
 
 {% block content %}
 <div class="container-sm my-4">
-    <h2 class="mb-4 d-flex justify-content-between align-items-center">
+    <h2>
         Actividades Vigentes
-        <div>
-            <a class="btn btn-warning">➕ Añadir</a>
-        </div>
+        <button class="btn btn-warning mt-2 mt-sm-0 float-end" data-bs-toggle="collapse">
+            ➕ Añadir
+        </button>
     </h2>
 
     <div class="accordion" id="accordionActividades">
         {% for actividad in actividades %}
         <div class="accordion-item">
-            <h2 class="accordion-header" id="heading{{ forloop.counter }}">
+            <h3 class="accordion-header" id="heading{{ forloop.counter }}">
                 <button class="accordion-button collapsed" type="button"
                         data-bs-toggle="collapse"
                         data-bs-target="#collapse{{ forloop.counter }}">
                     {{ actividad.categoria }} - {{ actividad.titulo }}
                 </button>
-            </h2>
+            </h3>
             <div id="collapse{{ forloop.counter }}"
                  class="accordion-collapse collapse"
                  data-bs-parent="#accordionActividades">
