--- a/parroquiaproject/sitio/templates/inicio.html
+++ b/parroquiaproject/sitio/templates/inicio.html
@@ -17,13 +17,11 @@
 {% block content %}
 <div class="container mt-4">
 
-  <h2 class="mb-4 d-flex justify-content-between align-items-center">
+  <h2>
     Noticias & Anuncios
-    <div>
-      <button class="btn btn-warning" data-bs-toggle="collapse" data-bs-target="#formNoticia">
-        ➕ Publicar
-      </button>
-    </div>
+    <button class="btn btn-warning mt-2 mt-sm-0 float-end" data-bs-toggle="collapse" data-bs-target="#formNoticia">
+      ➕ Publicar
+    </button>
   </h2>
 
   <!-- FORM NUEVA NOTICIA -->
