--- a/parroquiaproject/sitio/templates/iglesias.html
+++ b/parroquiaproject/sitio/templates/iglesias.html
@@ -36,7 +36,7 @@
       <div class="card shadow-sm rounded-3 h-100 d-flex flex-column">
         
         {% if iglesia.imagen %}
-         <img src="{{ iglesia.imagen.url }}" class="card-img-top img-fluid" alt="{{ iglesia.imagen.name }}"
+         <img src="{{ iglesia.imagen.url }}" class="card-img-top img-fluid" alt="{{ iglesia.nombre }}"
           style="height: 250px; object-fit: cover; width: 100%;">
         {% else %}
         <div class="d-flex align-items-center justify-content-center bg-light border-bottom" style="height: 250px;">
