--- a/parroquiaproject/sitio/templates/base.html
+++ b/parroquiaproject/sitio/templates/base.html
@@ -45,6 +45,7 @@
                 <li class="nav-item"><a class="nav-link" href="/actividades/">Actividades</a></li>
                 <li class="nav-item"><a class="nav-link" href="/horarios/">Horarios</a></li>
                 <li class="nav-item"><a class="nav-link" href="/calendario/">Calendario</a></li>
+                <li class="nav-item"><a class="nav-link" href="/dashboard/">Perfil</a></li>
             </ul>
 
             <!-- Sesión -->
