--- a/parroquiaproject/sitio/templates/base.html
+++ b/parroquiaproject/sitio/templates/base.html
@@ -40,12 +40,17 @@
         <!-- Links -->
         <div class="collapse navbar-collapse" id="navbarContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link" href="/">Inicio</a></li>
-                <li class="nav-item"><a class="nav-link" href="/iglesias/">Iglesias</a></li>
-                <li class="nav-item"><a class="nav-link" href="/actividades/">Actividades</a></li>
-                <li class="nav-item"><a class="nav-link" href="/horarios/">Horarios</a></li>
-                <li class="nav-item"><a class="nav-link" href="/calendario/">Calendario</a></li>
-                <li class="nav-item"><a class="nav-link" href="/dashboard/">Perfil</a></li>
+            <li class="nav-item"><a class="nav-link" href="/">Inicio</a></li>
+            <li class="nav-item"><a class="nav-link" href="/iglesias/">Iglesias</a></li>
+            <li class="nav-item"><a class="nav-link" href="/actividades/">Actividades</a></li>
+            <li class="nav-item"><a class="nav-link" href="/horarios/">Horarios</a></li>
+            <li class="nav-item"><a class="nav-link" href="/calendario/">Calendario</a></li>
+            </ul>
+
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a href="/dashboard/" class="btn btn-outline-dark btn-sm me-1">Perfil</a>
+                </li>
             </ul>
 
             <!-- Sesión -->
